--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "eslint": "^5.6.1",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "install": "^0.12.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
